# Claude-Research

./: .gitignore  CLAUDE.md  pyproject.toml  vercel.json
api/: config.py  main.py  models.py  requirements.txt
api/routers/: assessment.py  context.py  data.py  grid.py
data/: export_supabase.py  mira_persona_assessments.json
docs/: SIMULATION_HANDOFF.md  adaptive_filtering_rules.yaml  cross_framework_mapping.yaml  mira_persona_definitions.md  unified_scoring.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  constants.js  index.css
frontend/src/api/: client.js
frontend/src/components/: ConsentBanner.jsx  ContextForm.jsx  Layout.jsx  NoteModal.jsx
frontend/src/components/comparison/: ArchetypeList.jsx  DimensionComparison.jsx  RevealPanel.jsx  dimensionMeta.js
frontend/src/components/questions/: MultiSelectInput.jsx  NumberInput.jsx  QuestionCard.jsx  SelectInput.jsx  SliderInput.jsx  ToggleInput.jsx
frontend/src/context/: AssessmentContext.jsx
frontend/src/pages/: AssessmentPage.jsx  ComparisonPage.jsx  GuidePage.jsx  IdentifyPage.jsx  ResearchPage.jsx  ResultsPage.jsx  WelcomePage.jsx
src/: app.py  dimension_slider_mapping.py  midrange_analysis.py  mira_bridge.py  movement_analysis.py  slider_sensitivity.py  test_persona_validation.py  viable_zones.py  visualisation.py
src/lib/: __init__.py  components.py  descriptions.py  mira_questions.py  question_engine.py  supabase_client.py
src/pages/: 01_welcome.py  02_assessment.py  03_results.py  04_identify.py
(+7 files in other folders)
