[project]
name = "capops-balance"
version = "0.1.0"
description = "Cap/Ops Balance Research Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
app = "api.main:app"

[tool.vercel.scripts]
build = "cd frontend && npm install && npm run build && mkdir -p ../public && cp -r dist/* ../public/"
